Added sunrise and sunset and duration day/nigth

--- a/src/views/partials/weatherWidget.hbs
+++ b/src/views/partials/weatherWidget.hbs
@@ -61,6 +61,19 @@
                 <button class="btnNext"><i class="icon-arrow-right"></i></button>
             </div>
         </div>
+        <div class="salidaPuesta">
+            <div class="salidaPuesta-sol">
+                <p>Salida Sol: {{weatherToday.solSalida}}</p>
+                <p>Mediodía: {{weatherToday.solMediodia}}</p>
+                <p>Puesta Sol: {{weatherToday.solPuesta}}</p>
+                <p>Duración Día: {{weatherToday.duracionDia}}</p>
+            </div>
+            <div class="salidaPuesta-luna">
+                <p>Salida Luna: {{weatherToday.lunaSalida}}</p>
+                <p>Puesta Luna: {{weatherToday.lunaPuesta}}</p>
+                <p>Duración Noche: {{weatherToday.duracionNoche}}</p>
+            </div>
+        </div>
         <i class="copy">*Datos obtenidos de tiempo.com</i>
     </div>
 
