Small UI modifications

--- a/src/views/partials/daySelected.hbs
+++ b/src/views/partials/daySelected.hbs
@@ -1,4 +1,4 @@
-<h2 class="week-daySelected-hours-title"><span class="week-daySelected-hours-title-spanTitle">El tiempo en </span><span>{{hour.0.city}}</span> <span>{{hour.0.nombreDia}} {{fecha}}</span></h2>
+<h2 class="week-daySelected-hours-title"><span class="week-daySelected-hours-title-spanTitle">El tiempo en </span><span class="week-daySelected-hours-title-spanCity">{{hour.0.city}}</span> <span>{{hour.0.nombreDia}} {{fecha}}</span></h2>
 {{#each hour}}
 <div class="week-daySelected-hours-hour">
     <div class="week-daySelected-hours-hour-time">
