--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -217,8 +217,7 @@ li:hover {
 
 .todayWeatherIcon {
     width: 90px;
-    height: 90px;
-    margin-top: -0.5em;
+    height: auto;
     margin-right: 0;
 }
 .bold {
@@ -493,7 +492,7 @@ li:hover {
     justify-content: space-evenly;
     align-items: center;
     border-top: 0.01rem solid gray;
-    padding: 1em 0 0.6em;
+    padding: 0.5em 0;
     font-size: 1rem;
 }
 
@@ -513,7 +512,7 @@ li:hover {
 }
 
 .week-daySelected-hours-hour img {
-    height: 3em;
+    height: auto;
     width: 3em;
     vertical-align: middle;
 }
@@ -802,6 +801,8 @@ li:hover {
     }
 
     .week-daySelected-hours-hour-time {
+        display: flex;
+        align-items: center;
         margin-left: 0.5em;
         margin-right: 0em;
         flex-shrink: 0;
@@ -826,12 +827,16 @@ li:hover {
         width: 10em;
     }
 
+    .week-daySelected-hours-vientoUV {
+        margin: 0 1em;
+        width: 7em;
+    }
     .week-daySelected-hours-vientoUV .icon-sun{
         font-size: 1.5rem;
     }
     .week-daySelected-hours-vientoUV-desc{
         flex-shrink: 0;
-        width: 6em;
+        width: 7em;
     }
 
     .week-daySelected-hours-title-spanTitle {
@@ -1043,9 +1048,11 @@ li:hover {
     .week-daySelected-hours-title {
         font-size: 1rem;
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
         align-items: center;
         margin-right: 1.3em;
+        text-align: center;
     }
     .week-daySelected-hours-hour {
         display: flex;
