Done Decoupling from data and view

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -23,10 +23,9 @@
     <input type="text" name="ciudadInput" id="ciudadInput" placeholder="Buscar directamente por ciudad">
     <div class="resultadoCiudades" id="resultadoCiudades"></div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.runtime.js"></script>
-<script src="js/weatherWidget.precompiled.js"></script>
-<script src="js/ciudadesSelect.precompiled.js"></script>
-<script src="js/daySelected.precompiled.js"></script>
-<script src="js/index.js"></script>
-
+<script src="js/view/plugins/Chart.min.js"></script>
+<script src="js/view/plugins/handlebars.runtime-v4.7.6.js"></script>
+<script src="js/view/precompiled/weatherWidget.precompiled.js"></script>
+<script src="js/view/precompiled/ciudadesSelect.precompiled.js"></script>
+<script src="js/view/precompiled/daySelected.precompiled.js"></script>
+<script type="module" src="js/controller/index.js"></script>
