Decoupling scripts. * Decoupling from html(hbs) script tags and using import on js files to use it.

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,3 @@
-{{!-- <header>
-    <h1>El Tiempo</h1>
-</header> --}}
 <div class="selection">
 <select name="continentes" id="continentes">
     <option id="optionTitle">Elige Continente</option>
@@ -23,9 +20,5 @@
     <input type="text" name="ciudadInput" id="ciudadInput" placeholder="Buscar directamente por ciudad">
     <div class="resultadoCiudades" id="resultadoCiudades"></div>
 </div>
-<script src="js/view/plugins/Chart.min.js"></script>
-<script src="js/view/plugins/handlebars.runtime-v4.7.6.js"></script>
-<script src="js/view/precompiled/weatherWidget.precompiled.js"></script>
-<script src="js/view/precompiled/ciudadesSelect.precompiled.js"></script>
-<script src="js/view/precompiled/daySelected.precompiled.js"></script>
+{{!-- <script src="js/view/plugins/handlebars.runtime-v4.7.6.js"></script> --}}
 <script type="module" src="js/controller/index.js"></script>
