--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -20,4 +20,4 @@
     <input type="text" name="ciudadInput" id="ciudadInput" placeholder="Buscar directamente por ciudad">
     <div class="resultadoCiudades" id="resultadoCiudades"></div>
 </div>
-<script type="module" src="js/controller/index.js"></script>
+<script type="module" src="js/controller/main.js"></script>
